--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,8 +63,13 @@
 	</div>
       </nav>
 
+      <div class="container-fluid custom-main-content">
+	{{ content }}
+      </div>
+      
     </section>
   </div>
+
 
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"
 	integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
