--- a/assets/styles/custom.css
+++ b/assets/styles/custom.css
@@ -1,13 +1,15 @@
 body
 {
-    padding-top: 5rem;
-    font-family: 'Noto Sans Bengali', 'Noto Sans';
+    padding-top: 5px;
+    font-family: 'Noto Sans';
 }
+
+
 
 @media print {
     body
     {
-	font-family: 'Noto Sans Bengali', 'Noto Serif';
+	font-family: 'Noto Serif';
 	font-size: 110%;
     }
     pre code
@@ -22,7 +24,7 @@ body
 
 pre code
 {
-    font-family: 'Noto Sans Bengali', 'Noto Sans';
+    font-family: 'Noto Sans';
 }
 
 img
@@ -44,11 +46,12 @@ pre
 h1, h2, h3
 {
     padding: 5px;
-    font-family: 'Noto Sans Bengali', 'Noto Serif';
+    padding-left: 0px;
+    font-family: 'Noto Serif';
 }
 
-h1 { font-size: 1.5rem; }
-h2 { font-size: 1.35rem; }
+h1 { font-size: 1.4rem; }
+h2 { font-size: 1.3rem; }
 h3 { font-size: 1.2rem; }
 
 .nav-link
@@ -108,8 +111,9 @@ li.list-group-item a, ul.custom-toc-print li a
 
 div.custom-main-content
 {
-    max-width: 1000px;
+    max-width: 900px;
     margin: auto;
+    background: #F0F8CF;
 }
 
 img.img-fluid
