make navbar static, add footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -66,6 +66,10 @@
       <div class="container-fluid custom-main-content">
 	{{ content }}
       </div>
+
+      <div id="footer"> 
+	For feedback and queries, contact statmath [at] isid.ac.in	
+      </div>
       
     </section>
   </div>
@@ -88,16 +92,6 @@
 	crossorigin="anonymous">
 </script>
 
-
-<script type="text/javascript">
-// make navbar auto-hide on scroll
-$(document).ready(
-    function() {
-	$("#topnav").autoHidingNavbar();
-	$("img.float-right").addClass("d-none d-md-block");
-    }
-);
-</script>
 
 </body>
 </html>
