make navbar non-fixed

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
   <div id="page-content">
     <section>
 
-      <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top" id="topnav">
+      <nav class="navbar navbar-expand-md navbar-dark bg-dark" id="topnav">
 	<div class="container-fluid">
 
 	  <div class="navbar-header">
@@ -57,7 +57,7 @@
 	  </div>
 
 	  <div class="navbar-header">
-	    <span class="custom-nav-title h1 d-inline">{{ page.title }}</span>
+	    <span class="custom-nav-title h1">{{ page.title }}</span>
 	  </div>
 
 	</div>
