--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -67,7 +67,7 @@
 	{{ content }}
       </div>
 
-      <div id="footer"> 
+      <div id="container-fluid footer"> 
 	For feedback and queries, contact statmath [at] isid.ac.in	
       </div>
       
