--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,15 +42,46 @@
 		  Home
 		</a>
 
+		<ul>
+		  <li><p><a href="about.html">About Us</a></p></li>
 
-		<a href="about.html" class="dropdown-item" role="button">About Us</a>
-		<a href="academics.html" class="dropdown-item" role="button">Academic Program</a>
-		<a href="faculty.html" class="dropdown-item" role="button">Faculty</a>
-		<a href="visitors.html" class="dropdown-item" role="button">Visitors</a>
-		<a href="students.html" class="dropdown-item" role="button">Students</a>
-		<a href="seminars.html" class="dropdown-item" role="button">Seminars</a>
-		<!-- <a href=".html" class="dropdown-item" role="button">Preprints?</a> -->
-		<a href="general.html" class="dropdown-item" role="button">General Information</a>
+		  <!-- Possible sub-pages: past faculty, past research scholars -->
+		  
+		  <li><p>People</p>
+		    <ul>
+		      <li><a href="faculty.html" >Faculty</a></li>
+		      <li><a href="visitors.html" >Visitors</a></li>
+		      <li><a href="students.html" >Students</a></li>
+		      <li><a href="staff.html" >Staff</a></li>
+		      <li><a href="past-members.html" >Past Members</a></li>
+		    </ul>
+		  </li>
+		  
+		  <li><p>Activities</p>
+		    <ul>
+		      <li><a href="teaching.html" >Teaching</a></li>
+		      <li><a href="research.html" >Research</a></li>
+		    </ul>
+		  </li>
+
+		  <li><p>Events</p>
+		    <ul>
+		      <li><a href="seminars.html" >Seminars</a></li>
+		      <li><a href="confs.html" >Conferences and Workshops</a></li>
+		    </ul>
+		  </li>
+
+		  <li><p>Join Us</p>
+		    <ul>
+		      <li><a href="seminars.html" >Faculty Positions</a></li>
+		      <li><a href="confs.html" >Visiting Positions</a></li>
+		    </ul>
+		  </li>
+
+		  <li><p><a href="general.html" >General Information</a></p></li>
+		  <li><p><a href="sitemap.html" >Site Map</a></p></li>
+		  
+		</ul>
 
 	      </div>
 	    </div>
