better nav menu

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,54 +34,7 @@
                    </path>
                  </svg>
 	      </button>
-	      <div class="dropdown-menu">
-		<a href="/" class="dropdown-item" role="button">
-		  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="24" height="24">
-		    <path fill-rule="evenodd" d="M16 9l-3-3V2h-2v2L8 1 0 9h2l1 5c0 .55.45 1 1 1h8c.55 0 1-.45 1-1l1-5h2zm-4 5H9v-4H7v4H4L2.81 7.69 8 2.5l5.19 5.19L12 14z"></path>
-		  </svg>
-		  Home
-		</a>
 
-		<ul>
-		  <li><p><a href="about.html">About Us</a></p></li>
-
-		  <!-- Possible sub-pages: past faculty, past research scholars -->
-		  
-		  <li><p>People</p>
-		    <ul>
-		      <li><a href="faculty.html" >Faculty</a></li>
-		      <li><a href="visitors.html" >Visitors</a></li>
-		      <li><a href="students.html" >Students</a></li>
-		      <li><a href="staff.html" >Staff</a></li>
-		      <li><a href="past-members.html" >Past Members</a></li>
-		    </ul>
-		  </li>
-		  
-		  <li><p>Activities</p>
-		    <ul>
-		      <li><a href="teaching.html" >Teaching</a></li>
-		      <li><a href="research.html" >Research</a></li>
-		    </ul>
-		  </li>
-
-		  <li><p>Events</p>
-		    <ul>
-		      <li><a href="seminars.html" >Seminars</a></li>
-		      <li><a href="confs.html" >Conferences and Workshops</a></li>
-		    </ul>
-		  </li>
-
-		  <li><p>Join Us</p>
-		    <ul>
-		      <li><a href="seminars.html" >Faculty Positions</a></li>
-		      <li><a href="confs.html" >Visiting Positions</a></li>
-		    </ul>
-		  </li>
-
-		  <li><p><a href="general.html" >General Information</a></p></li>
-		  <li><p><a href="sitemap.html" >Site Map</a></p></li>
-		  
-		</ul>
 
 	      </div>
 	    </div>
@@ -94,6 +47,56 @@
 	</div>
       </nav>
 
+
+      <nav id="left-menu" aria-label="Site Navigation">
+	<ul class="menu">
+
+	  <li><a href="/" ><p>Home</p></a></li>
+
+	  <li><a href="about.html"><p>About Us</p></a></li>
+
+	  <li><p>People
+	    <ul>
+	      <li><a href="faculty.html" ><p>Faculty</p></a></li>
+	      <li><a href="visitors.html" ><p>Visitors</p></a></li>
+	      <li><a href="students.html" ><p>Students</p></a></li>
+	      <li><a href="staff.html" ><p>Staff</p></a></li>
+	      <li><a href="past-members.html" ><p>Past Members</p></a></li>
+	    </ul>
+	    </p>
+	  </li>
+	  
+	  <li><p>Activities</p>
+	    <ul>
+	      <li><a href="teaching.html" ><p>Teaching</p></a></li>
+	      <li><a href="research.html" ><p>Research</p></a></li>
+	    </ul>
+	  </li>
+
+	  <li><p>Events</p>
+	    <ul>
+	      <li><a href="seminars.html" ><p>Seminars</p></a></li>
+	      <li><a href="confs.html" ><p>Conferences and Workshops</p></a></li>
+	    </ul>
+	  </li>
+
+	  <li><p>Join Us</p>
+	    <ul>
+	      <li><a href="seminars.html" ><p>Faculty Positions</p></a></li>
+	      <li><a href="confs.html" ><p>Visiting Positions</p></a></li>
+	    </ul>
+	  </li>
+
+	  <li><a href="general.html" ><p>General Information</p></a></li>
+	  <li><a href="sitemap.html" ><p>Site Map</p></a></p></li>
+	  
+	</ul>
+      </nav>
+
+      
+
+
+      
       <div class="container-fluid custom-main-content">
 	{{ content }}
       </div>
