--- a/assets/styles/dropdown.css
+++ b/assets/styles/dropdown.css
@@ -46,3 +46,14 @@ nav li p:hover
     background: #DDDDDD;
 }
 
+img.fphoto
+{
+    display: block;
+    float: right;
+    max-height: 200px;
+    width: auto;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    padding: 5px;
+}
+
