--- a/assets/styles/dropdown.css
+++ b/assets/styles/dropdown.css
@@ -1,4 +1,29 @@
 
+@media screen {
+
+    body { background-image: url("/assets/styles/red.jpg"); }
+    main
+    {
+	background-color: #ffffff99;
+    }
+    header#topnav
+    {
+	background-size: 100%;
+	background-color: #bea682cc;
+    }
+    header#topnav a
+    {
+	color: #000000DD;
+    }
+    a
+    {
+	color: #880000BB;
+    }
+    a:hover
+    {
+	color: #880000;
+    }
+}
 
 #page-content {
     padding: 20px;
