--- a/_layouts/dropdown.html
+++ b/_layouts/dropdown.html
@@ -26,10 +26,10 @@
 
 <body>
   <div class="container">
-  <header>
+  <header id="topnav">
 
     <!-- https://getbootstrap.com/docs/4.0/components/navbar/ -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg"> <!-- navbar-light bg-light -->
 
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 	<span class="navbar-toggler-icon"></span>
