--- a/_layouts/dropdown.html
+++ b/_layouts/dropdown.html
@@ -19,8 +19,6 @@
 
   <!-- <link rel="stylesheet" href="assets/styles/custom.css"> -->
   <link rel="stylesheet" href="assets/styles/dropdown.css">
-  <!-- todo: https://www.aleksandrhovhannisyan.com/blog/how-to-add-a-copy-to-clipboard-button-to-your-jekyll-blog/ -->
-
   <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.3.0/css/all.css?ver=5.3.0' type='text/css' media='all' />
 </head>
 
@@ -32,7 +30,8 @@
     <nav class="navbar navbar-expand-lg"> <!-- navbar-light bg-light -->
 
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-	<span class="navbar-toggler-icon"></span>
+	<!-- <span class="navbar-toggler-icon"></span> -->
+	<i class="fas fa-bars"></i>
       </button>
 
       <div class="collapse navbar-collapse align-right" id="navbarNav">
@@ -113,7 +112,7 @@
       </div>
 
       <a class="navbar-brand" href="/">
-	<p>SMU Delhi</p>
+	<span>SMU Delhi</span>
 	<!-- <img src="smud.svg" height="62" width="400" alt="Stat-Math Unit, ISI Delhi" /> -->
       </a>
 
